--- a/components/common/ScrollSlider/index.module.scss
+++ b/components/common/ScrollSlider/index.module.scss
@@ -37,15 +37,6 @@
   }
 }
 
-.more {
-  margin: 0 2rem;
-  text-align: right;
-  cursor: pointer;
-
-  :global(p) {
-    font-weight: 700 !important;
-    font-size: 32px;
-    line-height: 84.8%;
-    margin-bottom: 1rem;
-  }
+.moreBtn {
+  margin: 0 80%;
 }
