--- a/components/OrderHistory/OrderItem/index.module.scss
+++ b/components/OrderHistory/OrderItem/index.module.scss
@@ -8,7 +8,7 @@
   }
 
   .num {
-    color: #A175FF;
+    color: #a175ff;
     font-family: 'Gilroy', sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -38,13 +38,12 @@
       .oldPrice {
         font-weight: 300;
         font-size: 20px;
-        text-decoration-line: line-through
+        text-decoration-line: line-through;
       }
       .price {
         font-weight: 700;
         font-size: 24px;
         line-height: 110%;
-
       }
     }
     .images {
@@ -53,7 +52,7 @@
       gap: 1rem;
       max-width: 350px;
     }
-    .more{
+    .more {
       display: flex;
       align-items: center;
       gap: 2rem;
@@ -72,14 +71,14 @@
     font-weight: 100;
     font-size: 20px;
     line-height: 110%;
-    margin: .5rem 0;
+    margin: 0.5rem 0;
   }
 }
 .status {
   font-weight: 700;
   font-size: 24px;
   line-height: 110%;
-  color: #A175FF;
+  color: #a175ff;
 }
 
 .footer {
@@ -87,6 +86,6 @@
   justify-content: space-between;
   align-items: center;
   .isPaid {
-    color: #0A8831;
+    color: #0a8831;
   }
 }
