--- a/components/common/Tabs/index.module.scss
+++ b/components/common/Tabs/index.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   padding-left: 2rem;
 
-  .tabTitle{
+  .tabTitle {
     border: 2px solid black;
     padding: 0.5rem 1.5rem;
     margin-right: 1.5rem;
@@ -14,11 +14,10 @@
     letter-spacing: 0.07em;
   }
 
-  .active{
+  .active {
     border-bottom: 2px solid transparent;
-    color: #A175FF;
+    color: #a175ff;
   }
-
 }
 
 .tabContent {
