--- a/components/common/Modal/index.module.scss
+++ b/components/common/Modal/index.module.scss
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.3);
-  transition: .3s;
+  transition: 0.3s;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -21,7 +21,7 @@
 }
 
 .header {
-  padding: 1rem ;
+  padding: 1rem;
   display: flex;
   justify-content: flex-end;
   position: sticky;
