--- a/components/common/DropDown/index.module.scss
+++ b/components/common/DropDown/index.module.scss
@@ -6,6 +6,10 @@
   width: 200px;
   border: 2px solid black;
   z-index: 2;
+  flex-direction: column;
+  height: auto !important;
+  gap: 0;
+  align-items: center;
 
   .menuItem {
     text-align: center;
@@ -17,6 +21,8 @@
 }
 
 .mask {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   height: 100vh;
   top: 0;
