--- a/components/Search/index.module.scss
+++ b/components/Search/index.module.scss
@@ -3,10 +3,10 @@
 }
 
 .search__panel__input{
-    width: 30%;
+    width: 20%;
     text-align: end;
     border: none;
-    border-bottom: solid;
+    border-bottom: solid 2px;
     font-family: inherit;
     font-size: 1rem;
     font-weight: 400;
