--- a/components/Search/index.module.scss
+++ b/components/Search/index.module.scss
@@ -7,8 +7,10 @@
   text-align: end;
   border: none;
   border-bottom: solid 2px;
+  padding-left: 10px;
   font-family: inherit;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
+  font-size: 24px;
 }
