--- a/components/Basket/BasketItems/BasketSummary/index.module.scss
+++ b/components/Basket/BasketItems/BasketSummary/index.module.scss
@@ -5,6 +5,9 @@
   width: 544px;
   padding: 56px;
   border: 2px solid #000;
+  height: 100%;
+  position: sticky;
+  top: 32px;
 
   .total {
     display: flex;
