--- a/components/Basket/Recommendations/index.module.scss
+++ b/components/Basket/Recommendations/index.module.scss
@@ -1,5 +1,5 @@
 @import 'styles/mixins.scss';
 
 .heading {
-  @include contentWidth(true, true);
+  @include contentWidth(true, true, calc(100% - 4rem));
 }
