--- a/components/Main/index.module.scss
+++ b/components/Main/index.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   .text {
-    @include contentWidth(true, true);
+    @include contentWidth(true, true, calc(100% - 4rem));
     > h1 {
       margin: 2rem;
     }
