--- a/hoc/MainLayout/Header/Navigation/index.module.scss
+++ b/hoc/MainLayout/Header/Navigation/index.module.scss
@@ -1,6 +1,8 @@
 .navbar{
-    border: solid;
     height: 5rem;
+    border: solid;
+    border-left: none;
+    border-right: none;
     margin: 0 auto;
 }
 
