--- a/hoc/MainLayout/Header/Navigation/index.module.scss
+++ b/hoc/MainLayout/Header/Navigation/index.module.scss
@@ -1,20 +1,25 @@
 .navbar{
-    height: 5rem;
-    border: solid;
-    border-left: none;
-    border-right: none;
+    height: 4rem;
     margin: 0 auto;
 }
 
 .navbar__list{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-wrap: wrap;
     list-style-type: none;
+    font-size: 15px;
+    font-weight: 400;
+    gap: 3rem;
 }
 
 .link{
     color: black;
+    text-decoration: none;
+}
+
+.linkSale{
+    color: #BDDA63;
     text-decoration: none;
 }
