--- a/hoc/MainLayout/Header/index.module.scss
+++ b/hoc/MainLayout/Header/index.module.scss
@@ -1,20 +1,22 @@
 .wrapper {
+  position: fixed;
   width: 100%;
   display: flex;
   flex-direction: column;
+  z-index: 15;
   // gap: 1rem;
 
   .logo{
     padding: 0 2rem;
+    z-index: 5;
     &.clickable {
       cursor: pointer;
     }
   }
 
   .firstRow{
-    border: solid;
-    //border-bottom: none;
     height: 7rem;
+    margin: 0 auto;
   }
 
   .firstRow,
@@ -31,12 +33,16 @@
     padding: 0 2rem;
     justify-content: flex-end;
     gap: 3rem !important;
-    border: solid;
+    border: outset;
+    border-color: black;
     border-right: none;
+    border-width: 0.1rem;
+    z-index: 5;
     img {
       width: 25px;
     }
   }
+  
 
   .header{
     width: 100%;
@@ -44,19 +50,25 @@
     top: 0px;
     left: 0;
     right: 0;
-    z-index: 20;
-    background-color: white;
+    border: outset;
+    border-color: black;
+    border-top: none;
+    border-left: none;
+    border-width: 0.1rem;
+    transition: 0.3s linear;
+    //z-index: 4;
   }
+
+
+
 
   .navBar{
     width: 100%;
-    position: fixed;
-    top: 63px;
-    left: 0;
-    right: 0;
-    z-index: 15;
-    background-color: white;
-    transition: top 0.3s;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0 2rem;
   }
 
   .navBarHiden{
