--- a/hoc/MainLayout/Header/index.module.scss
+++ b/hoc/MainLayout/Header/index.module.scss
@@ -32,6 +32,7 @@
     display: flex;
     padding: 0 2rem;
     justify-content: flex-end;
+    align-items: center;
     gap: 3rem !important;
     border: outset;
     border-color: black;
