--- a/hoc/MainLayout/Header/Navigation/index.module.scss
+++ b/hoc/MainLayout/Header/Navigation/index.module.scss
@@ -1,22 +1,22 @@
 .navbar{
     height: 4rem;
-    margin: 0 auto;
 }
 
 .navbar__list{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
     list-style-type: none;
-    font-size: 15px;
+    font-size: 12px;
     font-weight: 400;
     gap: 3rem;
+    margin-block: 0;
 }
 
 .link{
     color: black;
     text-decoration: none;
+    margin-block: 0;
 }
 
 .linkSale{
