--- a/components/Main/ReupChoosen/index.module.scss
+++ b/components/Main/ReupChoosen/index.module.scss
@@ -1,33 +1,30 @@
 .slides {
   display: flex;
-  overflow: hidden;
+  overflow-x: hidden;
+  background: linear-gradient(180deg, rgba(54, 241, 229, 0) 20%, rgb(190, 218, 98) 20%);
   .slide {
+    background: var(--reup-green);
     padding: 2rem;
-    opacity: .5;
+    padding-top: 0;
+    margin-top: 5rem;
     transition: .3s;
     display: flex;
     gap: 2rem;
-    &.active {
+    &.active .text{
       opacity: 1;
+    }
+    .imgWrapper {
+      margin-top: -105px;
     }
     .imgWrapper img{
       width: 100%;
       height: auto;
     }
-
   }
-}
-
-.slider{
-  border-bottom: 1px solid black;
-  padding-bottom: 1rem;
-  background: var(--reup-green);
-  height: calc(100% - 200px);
 }
 
 .countTitle {
   margin: 1rem 2rem ;
-  transform: translateY(-94px);
 }
 
 .slideCount {
@@ -36,7 +33,7 @@
   margin-left: 2rem;
   display: flex;
   gap: 8px;
-  transform: translateY(-94px);
+  background: var(--reup-green);
   .activeCount {
     flex-grow: 1;
     background: black !important;
@@ -62,8 +59,20 @@
   flex-direction: column;
   gap: 1rem;
   padding: 2rem 0;
+  opacity: .5;
 }
 
 .moreBtn {
-  margin-top: 4rem;
+  margin-top: 2rem;
+}
+
+.footer {
+  background: var(--reup-green);
+  border-bottom: 1px solid black;
+  padding-bottom: 2rem;
+  transform: translateY(-50px);
+}
+
+.slider {
+  background: linear-gradient(180deg, rgba(54,241,229,0) 26%, rgba(190,218,98,1) 26%);
 }
