Поиск на главной

--- a/components/common/DropDown/index.module.scss
+++ b/components/common/DropDown/index.module.scss
@@ -1,10 +1,11 @@
 .menu {
   display: none !important;
   position: absolute;
-  top: 45px;
+  top: 48px;
+  left: -71px;
   background: white;
   width: 200px;
-  border: 2px solid black;
+  border: 1px solid black;
   z-index: 2;
   flex-direction: column;
   height: auto !important;
