--- a/components/SearchResult/SearchList/index.module.scss
+++ b/components/SearchResult/SearchList/index.module.scss
@@ -1,15 +1,43 @@
 .wrapper {
-  width: 80%;
+  width: 87%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 0.5rem;
+  .buttons {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding-left: 1rem;
+    button {
+      width: 213px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      margin-right: 2rem;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+    img {
+      width: 0.5rem;
+      height: auto;
+      margin-left: 20px;
+      transform: rotate(-90deg);
+    }
+  }
   .search_list {
     display: flex;
-    // padding: 2rem;
     flex-direction: row;
+    justify-content: flex-start;
     flex-wrap: wrap;
     > div {
-      padding: 2rem;
+      padding: 1rem;
+      width: 10%;
       span {
-        margin-right: 2rem;
-        margin-top: 2rem;
+        margin-right: 1rem;
+        margin-top: 1rem;
       }
     }
   }
