--- a/components/SearchResult/index.module.scss
+++ b/components/SearchResult/index.module.scss
@@ -1,27 +1,22 @@
 .wrapper {
-  padding: 2.5em;
+  padding: 1.5em;
   .search_input {
-    width: 100%;
-
     input {
       width: 100%;
       border: 0;
-      border-bottom: 2px solid black;
-
-      font-family: 'Gilroy';
-      font-style: normal;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 110%;
-      display: flex;
-      align-items: center;
-      letter-spacing: 0.07em;
+      border-bottom: 1px solid black;
+      padding-top: 1em;
     }
+  }
+
+  h1 {
+    padding-top: 1em;
   }
 
   .search_result {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-top: 2em;
   }
 }
