--- a/components/SearchResult/index.module.scss
+++ b/components/SearchResult/index.module.scss
@@ -1,6 +1,17 @@
 .wrapper {
   padding: 1.5em;
   .search_input {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    img {
+      position: absolute;
+      right: 1.875rem;
+      &:hover {
+        cursor: pointer;
+      }
+    }
     input {
       width: 100%;
       border: 0;
