--- a/components/SearchResult/SearchFilter/FilterSize/index.module.scss
+++ b/components/SearchResult/SearchFilter/FilterSize/index.module.scss
@@ -1,8 +1,80 @@
+@keyframes show {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .wrapper_size {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   border-bottom: 1px solid black;
-
+  .popupActive {
+    .popup_back {
+      position: fixed;
+      display: flex;
+      justify-content: center;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 1050;
+      max-width: 100vw;
+      max-height: 100vh;
+      background-color: rgba(255, 255, 255, 0.5);
+      animation: show 0.25s ease-in-out;
+      overflow-y: scroll;
+      .popup {
+        position: absolute;
+        z-index: 4;
+        top: 150px;
+        width: 75.625em;
+        height: 38.375em;
+        background: #fff;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.5);
+        padding: 2.5em;
+        img {
+          position: absolute;
+          top: 20px;
+          right: 20px;
+          width: 20px;
+          height: 20px;
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .popup_table {
+          table.iksweb {
+            width: 100%;
+            border-collapse: collapse;
+            border-spacing: 0;
+            height: auto;
+          }
+          table.iksweb,
+          table.iksweb td,
+          table.iksweb th {
+            border: 1px solid #595959;
+          }
+          table.iksweb td,
+          table.iksweb th {
+            padding: 3px;
+            width: 30px;
+            height: 35px;
+          }
+          table.iksweb th {
+            background: #347c99;
+            color: #fff;
+            font-weight: normal;
+          }
+        }
+      }
+    }
+  }
   .size_checkbox {
     padding-top: 0.75rem;
     width: 15%;
