--- a/components/SearchResult/SearchFilter/FilterColor/index.module.scss
+++ b/components/SearchResult/SearchFilter/FilterColor/index.module.scss
@@ -4,9 +4,11 @@
     padding-top: 0.5rem;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     button {
       width: 18%;
       height: 20%;
+      padding: 0.8em;
       margin-left: 0.3rem;
       &:hover {
         transform: scale(1.1);
