--- a/components/SearchResult/SearchFilter/FilterSize/index.module.scss
+++ b/components/SearchResult/SearchFilter/FilterSize/index.module.scss
@@ -29,9 +29,9 @@
       .popup {
         position: absolute;
         z-index: 4;
-        top: 150px;
+        top: 50px;
         width: 75.625em;
-        height: 38.375em;
+        height: 28.375em;
         background: #fff;
         display: flex;
         flex-direction: column;
@@ -71,13 +71,17 @@
             color: #fff;
             font-weight: normal;
           }
+          tr:hover {
+            background-color: #7991f5;
+            cursor: pointer;
+          }
         }
       }
     }
   }
   .size_checkbox {
     padding-top: 0.75rem;
-    width: 15%;
+    width: 25%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -102,9 +106,18 @@
     padding-top: 0.75rem;
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
+    div {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: nowrap;
+    }
     button {
-      width: 20%;
-      height: 20%;
+      width: auto !important;
+      padding: 0.8em;
+      height: auto;
       margin: 0.3rem;
       margin-left: 0;
     }
