--- a/components/common/Frame/index.module.scss
+++ b/components/common/Frame/index.module.scss
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   background: white;
-  border: 2px solid black;
-  padding: 2rem;
+  padding: 33px 45px;
   text-align: center;
 }
 
@@ -14,13 +13,19 @@
 .content {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   justify-content: space-between;
 }
 .header {
-  max-width: 350px;
+  width: 100%;
+  text-align: center;
+  margin-top: 0.7rem;
 }
 
 .close {
   cursor: pointer;
+}
+
+.hide {
+  opacity: 0;
+  pointer-events: none;
 }
