started product card

--- a/components/ProductDetail/Content/index.module.scss
+++ b/components/ProductDetail/Content/index.module.scss
@@ -8,4 +8,10 @@
   > div {
     width: 50%;
   }
+
+  .mainContent {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+  }
 }
