--- a/components/ProductDetail/Content/Header/index.module.scss
+++ b/components/ProductDetail/Content/Header/index.module.scss
@@ -1,22 +1,31 @@
 .wrapper {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  align-self: center;
-  align-items: baseline;
-  padding: 0 2rem;
-  > img {
-    width: 50px;
-    height: auto;
-  }
+  align-items: center;
 
   .info {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    align-items: flex-start;
     > div {
       display: flex;
+      flex-direction: column;
       justify-content: space-between;
       align-items: center;
+    }
+
+    .brandCode {
+      align-self: baseline;
+      padding: 20px 0;
+      color: #828282;
+    }
+  }
+
+  .icon {
+    img {
+      width: 20px;
+      height: 20px;
     }
   }
 }
