--- a/components/ProductDetail/Content/Params/index.module.scss
+++ b/components/ProductDetail/Content/Params/index.module.scss
@@ -2,7 +2,7 @@
   font-family: 'Gilroy', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 110%;
   letter-spacing: 0.07em;
   text-transform: uppercase;
@@ -19,8 +19,8 @@
   p {
     font-family: 'Gilroy', sans-serif;
     font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
+    font-weight: 300;
+    font-size: 16px;
     line-height: 110%;
     letter-spacing: 0.07em;
     color: #000000;
@@ -29,6 +29,7 @@
 
 .headRow {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   margin: 0;
   align-items: baseline;
@@ -36,15 +37,25 @@
   gap: 3rem;
 }
 
-.footer {
+.description {
+  border-bottom: 1px #000000 outset;
+}
+
+.price {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: baseline;
   gap: 1rem;
+  border-bottom: 1px #000000 outset;
+  padding: 1rem 0;
+
   .priceWrapper {
     display: flex;
+    flex-direction: row;
     gap: 0.5rem;
     align-items: baseline;
+
     .oldPrice {
       text-decoration: line-through;
       font-family: 'Gilroy', sans-serif;
@@ -55,6 +66,7 @@
       letter-spacing: 0.07em;
       color: rgba(0, 0, 0, 0.5);
     }
+
     .price {
       font-family: 'Dela Gothic One', sans-serif;
       font-style: normal;
@@ -63,6 +75,12 @@
       line-height: 110%;
       letter-spacing: 0.04em;
       color: #000000;
+      border: none;
     }
+  }
+
+  .productButtons {
+    display: flex;
+    gap: 20px;
   }
 }
