--- a/components/ProductDetail/Content/Slider/index.module.scss
+++ b/components/ProductDetail/Content/Slider/index.module.scss
@@ -1,15 +1,17 @@
 .slider {
   display: flex;
-  gap: 2rem;
+  align-self: start;
+  gap: 1rem;
   justify-content: center;
-  align-items: center;
+  max-height: 872px;
   .previewSlides {
-    width: 15%;
+    width: 20%;
     display: flex;
+    align-self: baseline;
     flex-direction: column;
-    gap: 1rem;
-    max-height: 584px;
-    overflow-y: scroll;
+    gap: 0.5rem;
+
+    // overflow-y: scroll;
     .prev {
       transition: 0.3s;
       outline: 2px solid transparent;
@@ -29,6 +31,7 @@
     img {
       width: 100%;
       height: auto;
+      max-height: 800px;
     }
   }
 }
