--- a/components/SearchResult/SearchFilter/index.module.scss
+++ b/components/SearchResult/SearchFilter/index.module.scss
@@ -1,6 +1,9 @@
 .wrapper_filter {
   width: 13%;
+
   .wrapper_content_filters {
+    border-right: 1px solid #000;
+    padding-right: 1rem;
     h2 {
       margin-top: 0;
       padding-top: 0;
