add first commit

--- a/layouts/MainLayout/Header/DropDownProfile/index.module.scss
+++ b/layouts/MainLayout/Header/DropDownProfile/index.module.scss
@@ -25,3 +25,8 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.lastItem {
+  border-top: 1px solid #000;
+  padding-top: 1rem;
+}
