--- a/components/PersonalAccount/BtnGroup/index.module.scss
+++ b/components/PersonalAccount/BtnGroup/index.module.scss
@@ -32,6 +32,8 @@
     }
     .twobtnThreeColumn {
       text-align: right;
+      background: var(--reup-primary);
+      color: white;
     }
   }
 }
