--- a/components/ProductDetail/Content/Params/index.module.scss
+++ b/components/ProductDetail/Content/Params/index.module.scss
@@ -41,10 +41,14 @@
   border-bottom: 1px #000000 outset;
   max-width: 745px;
 
-  p {
+  .short {
     overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    max-height: 2rem;
+  }
+
+  .full {
+    overflow: visible;
+    max-height: fit-content;
   }
 }
 
