--- a/components/Auth/Steps/Code/index.module.scss
+++ b/components/Auth/Steps/Code/index.module.scss
@@ -3,3 +3,14 @@
   max-width: 400px;
   margin: 1rem auto;
 }
+
+.sendCode {
+  cursor: pointer;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 1rem 0;
+}
