--- a/components/SearchResult/SearchList/index.module.scss
+++ b/components/SearchResult/SearchList/index.module.scss
@@ -28,22 +28,9 @@
     }
   }
   .search_list {
-    // display: flex;
-    // flex-direction: row;
-    // justify-content: space-between;
-    // flex-wrap: wrap;
-    // > div {
-    //   padding: 1rem;
-    //   width: 10%;
-    //   span {
-    //     margin-right: 1rem;
-    //     margin-top: 1rem;
-    //   }
-    // }
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 300px));
-    grid-template-rows: repeat(auto-fill, minmax(580px, 580px));
-    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     > div {
       padding: 1rem;
       width: 10%;
@@ -52,5 +39,17 @@
         margin-top: 1rem;
       }
     }
+
+    // display: grid;
+    // grid-template-columns: repeat(auto-fill, minmax(300px, 300px));
+    // grid-template-rows: repeat(auto-fill, minmax(580px, 580px));
+    // justify-content: space-between;
+    // > div {
+    //   padding: 1rem;
+    //   width: 10%;
+    //   span {
+    //     margin-right: 1rem;
+    //     margin-top: 1rem;
+    //   }
   }
 }
