--- a/layouts/MainLayout/Header/Search/index.module.scss
+++ b/layouts/MainLayout/Header/Search/index.module.scss
@@ -9,6 +9,8 @@
     opacity: 0;
     position: fixed;
     width: 100%;
+    height: 70vh;
+    overflow-y: auto;
     left: 0;
     top: 64px;
     transition: .3s;
@@ -60,6 +62,10 @@
     }
 }
 
+.pointer {
+    cursor: pointer;
+}
+
 .content {
     display: flex;
     justify-content: space-between;
@@ -95,8 +101,6 @@
         }
     }
     .previewWrapper {
-        height: 63vh;
-        overflow: scroll;
         .preview {
             padding: 2rem;
             padding-bottom: 0;
