--- a/components/common/Button/index.module.scss
+++ b/components/common/Button/index.module.scss
@@ -13,6 +13,25 @@
   letter-spacing: 0.07em;
   color: #000000;
 
+  &.small {
+    padding: 11px 25px;
+  }
+
+  &.disable {
+    border: none;
+    outline: none;
+    background: #f2f2f2;
+    color: #d6d6d6;
+    &:hover,
+    &:active,
+    &:focus {
+      border: none;
+      outline: none;
+      background: #f2f2f2;
+      color: #d6d6d6;
+    }
+  }
+
   &:hover {
     color: white;
     background: var(--reup-primary);
