--- a/components/SearchResult/index.module.scss
+++ b/components/SearchResult/index.module.scss
@@ -1,10 +1,11 @@
 .wrapper {
-  padding: 1.5em;
+  padding: 2.5em;
+
   .search_input {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+    justify-content: flex-start;
+    padding-bottom: 1.5em;
+
     img {
       position: absolute;
       right: 1.875rem;
@@ -17,6 +18,14 @@
       border: 0;
       border-bottom: 1px solid black;
       padding-top: 1em;
+      align-self: flex-start;
+      padding: 0;
+      padding-bottom: 1rem;
+      font-weight: 500;
+      font-size: 16px;
+      letter-spacing: 0.07em;
+
+      color: #000000;
     }
   }
 
