--- a/components/OrderHistory/OrderItem/index.module.scss
+++ b/components/OrderHistory/OrderItem/index.module.scss
@@ -7,85 +7,63 @@
     margin-bottom: 0;
   }
 
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .price {
+      display: flex;
+      gap: 15px;
+    }
+  }
+
   .num {
-    color: #a175ff;
-    font-family: 'Gilroy', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
+    color: var(--reup-blue);
+    margin: 1rem 0;
   }
 
   .content {
     display: flex;
     justify-content: space-between;
-    border: 2px solid black;
+    border: 1px solid black;
+    gap: 15px;
     padding: 1.5rem 2rem;
     > div {
+      min-width: 200px;
+      max-width: 250px;
+    }
+    .products {
+      display: flex;
+      gap: 10px;
+      max-width: fit-content;
+      .product {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 150px !important;
+        .productImg {
+          align-self: center;
+        }
+      }
+    }
+    .payed {
+      color: var(--reup-dark-green);
+    }
+    .status {
       display: flex;
       flex-direction: column;
-      gap: 2rem;
-    }
-    .row {
-      display: flex;
-      align-items: flex-end;
       justify-content: space-between;
-    }
-
-    .prices {
-      display: flex;
-      flex-direction: column;
-      letter-spacing: 0.07em;
-      .oldPrice {
-        font-weight: 300;
-        font-size: 20px;
-        text-decoration-line: line-through;
-      }
-      .price {
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 110%;
+      align-items: flex-end;
+      .info {
+        text-align: right;
       }
     }
-    .images {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-      max-width: 350px;
-    }
-    .more {
-      display: flex;
-      align-items: center;
-      gap: 2rem;
-    }
   }
 }
 
-.center {
-  gap: 1.5rem !important;
-  h4 {
-    margin: 0;
-    font-size: 24px;
-    line-height: 110%;
-  }
-  p {
-    font-weight: 100;
-    font-size: 20px;
-    line-height: 110%;
-    margin: 0.5rem 0;
-  }
+.space1 {
+  margin: 4px 0;
 }
-.status {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 110%;
-  color: #a175ff;
-}
-
-.footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  .isPaid {
-    color: #0a8831;
-  }
+.space2 {
+  margin: 8px 0;
 }
