--- a/components/common/Tabs/index.module.scss
+++ b/components/common/Tabs/index.module.scss
@@ -3,24 +3,23 @@
   padding-left: 2rem;
 
   .tabTitle {
-    border: 2px solid black;
-    padding: 0.5rem 1.5rem;
+    border: 1px solid black;
+    padding: 1rem 2rem;
     margin-right: 1.5rem;
     background: white;
-    margin-bottom: -2px;
-    font-style: normal;
-    font-size: 20px;
-    font-weight: 700;
-    letter-spacing: 0.07em;
+    margin-bottom: -1px;
+    transition: 0.3s;
+    cursor: pointer;
   }
 
   .active {
     border-bottom: 2px solid transparent;
-    color: #a175ff;
+    color: var(--reup-primary);
   }
 }
 
 .tabContent {
   padding: 2rem;
-  border-top: 2px solid black;
+  transition: 0.3s;
+  border-top: 1px solid black;
 }
