--- a/components/Basket/BasketItems/index.module.scss
+++ b/components/Basket/BasketItems/index.module.scss
@@ -1,28 +1,22 @@
-.wrapper {
-  padding: 0 50px;
+@import 'styles/mixins.scss';
 
-  .chooseAll {
+.wrapper {
+  @include contentWidth(true, true, calc(100% - 4rem));
+
+  .contentWrapper {
     display: flex;
-    align-items: center;
-    gap: 18px;
-    margin-left: 227px;
-    margin-bottom: 32px;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 20px;
-    line-height: 110%;
-    letter-spacing: 0.07em;
+    gap: 50px;
+    justify-content: space-between;
+    margin: 2rem 0;
   }
 
-  .basketBody {
-    display: flex;
-    justify-content: space-between;
-    gap: 25px;
-
-    .basketProductList {
+  .productList {
+    width: 75%;
+    .header {
       display: flex;
-      flex-direction: column;
-      gap: 32px;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 2rem;
     }
   }
 }
