--- a/components/Main/SaleSector/index.module.scss
+++ b/components/Main/SaleSector/index.module.scss
@@ -8,15 +8,18 @@
 
   .imgWrapper img {
     width: 100%;
-    height: 100%;
+    width: 100%;
+    object-fit: cover;
   }
   .row:first-child {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 524px;
   }
   .row:last-child {
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 328px;
   }
   .info {
     display: flex;
@@ -25,24 +28,8 @@
     padding: 2rem;
     cursor: pointer;
     transition: 0.3s;
-    h1 {
-      font-family: 'Dela Gothic One', sans-serif;
-      font-size: 32px;
-      font-weight: bold;
-      line-height: 35px;
-      letter-spacing: 0.04em;
-      text-align: right;
-    }
-    span {
-      text-align: right;
-      font-family: 'Gilroy', sans-serif;
-      font-size: 32px;
-      font-weight: 700;
-      line-height: 27px;
-      letter-spacing: 0.07em;
-      transition: 0.3s;
-      opacity: 0;
-    }
+    text-align: right;
+    padding-left: 4rem;
 
     &:hover {
       span {
@@ -50,10 +37,25 @@
       }
     }
   }
+
+  .text {
+    width: 60%;
+  }
+
+  .info:first-child {
+    align-items: start;
+    text-align: left;
+  }
+
+  .info:last-child {
+    align-items: end;
+    text-align: left;
+  }
 }
 
 .greenWrapper {
   background: var(--reup-green);
+  width: auto;
 }
 .blueWrapper {
   background: #0a8ec7;
