--- a/components/SearchResult/SearchList/index.module.scss
+++ b/components/SearchResult/SearchList/index.module.scss
@@ -2,13 +2,14 @@
   width: 87%;
   display: flex;
   flex-direction: column;
-  padding-top: 0.5rem;
   .buttons {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     padding-left: 1rem;
+    padding-top: 0;
+    margin-top: 0;
     button {
       width: 213px;
       display: flex;
@@ -30,12 +31,15 @@
   .search_list {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     flex-wrap: wrap;
     > div {
-      padding: 1rem;
-      width: 5%;
+      padding: 0.3rem;
+      padding-left: 1rem;
+      padding-top: 1rem;
+      width: 23%;
       span {
-        margin-right: 1rem;
+        margin-right: 0.3rem;
         margin-top: 1rem;
       }
     }
