--- a/components/Returns/index.module.scss
+++ b/components/Returns/index.module.scss
@@ -1,9 +1,9 @@
 @import 'styles/mixins.scss';
 
-.heading {
+.wrapper {
   @include contentWidth(true, true, calc(100% - 4rem));
-  margin: 1.5rem 0;
-  :not(:first-child) {
-    margin-top: 2rem;
+  margin-top: 2rem;
+  .title {
+    margin-bottom: 2rem;
   }
 }
