--- a/components/SearchResult/SearchFilter/FilterColor/index.module.scss
+++ b/components/SearchResult/SearchFilter/FilterColor/index.module.scss
@@ -6,8 +6,8 @@
     flex-direction: row;
     justify-content: space-between;
     button {
-      width: 18%;
-      height: 20%;
+      width: 3.438em;
+      height: 2.375em;
       padding: 0.8em;
       margin-left: 0.3rem;
       &:hover {
