--- a/components/SearchResult/SearchList/index.module.scss
+++ b/components/SearchResult/SearchList/index.module.scss
@@ -8,15 +8,19 @@
     flex-direction: row;
     justify-content: flex-start;
     padding-left: 1rem;
+    padding-right: 0;
     padding-top: 0;
     margin-top: 0;
+    .btn_sort {
+      margin-left: 11px;
+    }
     button {
-      width: 18%;
+      width: 13.313rem;
+      height: 3.125rem;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      margin-right: 2rem;
       &:hover {
         cursor: pointer;
       }
@@ -31,13 +35,12 @@
   .search_list {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    gap: 11px;
     flex-wrap: wrap;
+    padding-left: 1rem;
     > div {
-      padding: 0.3rem;
-      padding-left: 1rem;
       padding-top: 1rem;
-      width: 18%;
+      width: 13.313rem;
       span {
         margin-right: 0.3rem;
         margin-top: 1rem;
