form in process

--- a/components/SearchResult/DropDownBtn/BrandBtn/index.module.scss
+++ b/components/SearchResult/DropDownBtn/BrandBtn/index.module.scss
@@ -19,11 +19,23 @@
     }
   }
 }
-
 .ddTitle {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 10.2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  &:hover {
+    cursor: pointer;
+  }
+  .ddTitleSpanActive {
+    transform: rotate(180deg);
+    transition: 0.3s;
+  }
 }
 
 .lastItem {
