--- a/components/SearchResult/SearchList/index.module.scss
+++ b/components/SearchResult/SearchList/index.module.scss
@@ -11,7 +11,7 @@
     padding-right: 0;
     padding-top: 0;
     margin-top: 0;
-    .btn_sort {
+    .btn_brand {
       margin-left: 11px;
     }
     img {
@@ -31,7 +31,7 @@
       padding-top: 1rem;
       width: 13.313rem;
       span {
-        margin-right: 0.3rem;
+        margin-right: 0.1rem;
         margin-top: 1rem;
       }
     }
