--- a/components/SearchResult/SearchFilter/FilterStructure/index.module.scss
+++ b/components/SearchResult/SearchFilter/FilterStructure/index.module.scss
@@ -24,11 +24,8 @@
 
   .list_pattern {
     padding-top: 1rem;
-    .len,
-    .klen,
-    .bulion,
-    .medalion,
-    .omlet {
+    .hlopok,
+    .sintetika {
       display: flex;
       justify-content: flex-start;
       align-items: center;
