--- a/components/common/Button/index.module.scss
+++ b/components/common/Button/index.module.scss
@@ -27,9 +27,7 @@
     outline: none;
     background: #f2f2f2;
     color: #d6d6d6;
-    &:hover,
-    &:active,
-    &:focus {
+    &:hover {
       border: none;
       outline: none;
       background: #f2f2f2;
@@ -40,11 +38,5 @@
   &:hover {
     color: white;
     background: var(--reup-primary);
-  }
-
-  &:active,
-  &:focus {
-    color: white;
-    background: var(--reup-primary-active);
   }
 }
