--- a/components/common/ProductCard/index.module.scss
+++ b/components/common/ProductCard/index.module.scss
@@ -23,8 +23,8 @@
   }
 
   .productImg {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
     cursor: pointer;
     transition: 0.3s;
   }
