--- a/components/Ordering/index.module.scss
+++ b/components/Ordering/index.module.scss
@@ -5,7 +5,7 @@
   .mainContentOrder {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-self: center;
     padding-left: 263px;
     padding-right: 263px;
