--- a/components/Ordering/DataOrder/PersonalData/index.module.scss
+++ b/components/Ordering/DataOrder/PersonalData/index.module.scss
@@ -17,4 +17,10 @@
       padding-top: 2rem;
     }
   }
+
+  .checkbox {
+    align-self: flex-end;
+    // width: 80%;
+    padding-top: 2rem;
+  }
 }
