выбор схемы бренда

--- a/components/Brands/Scheme1/index.module.scss
+++ b/components/Brands/Scheme1/index.module.scss
@@ -1,7 +1,22 @@
 @import 'styles/mixins.scss';
 
+.linkWithArrow {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  :global(p) {
+    display: inline;
+  }
+}
+
 .banner {
   position: relative;
+  .bannerUploadBtn {
+    position: absolute;
+    top: 10px;
+    left: 20px;
+  }
   .bannerItem {
     display: none;
     &.active {
