--- a/components/ProductDetail/Content/Params/index.module.scss
+++ b/components/ProductDetail/Content/Params/index.module.scss
@@ -16,15 +16,6 @@
   h1 {
     @include h1;
   }
-  p {
-    font-family: 'Gilroy', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 110%;
-    letter-spacing: 0.07em;
-    color: #000000;
-  }
 }
 
 .headRow {
@@ -35,10 +26,13 @@
   align-items: baseline;
   width: fit-content;
   gap: 3rem;
+  border-bottom: 1px #000000 outset;
+  padding-bottom: 2rem;
 }
 
 .description {
   border-bottom: 1px #000000 outset;
+  padding-bottom: 2rem;
 
   .short {
     overflow: hidden;
@@ -58,7 +52,7 @@
   align-items: baseline;
   gap: 1rem;
   border-bottom: 1px #000000 outset;
-  padding: 1rem 0;
+  padding: 2rem 0;
 
   .priceWrapper {
     display: flex;
