--- a/components/ProductDetail/Content/Slider/index.module.scss
+++ b/components/ProductDetail/Content/Slider/index.module.scss
@@ -4,25 +4,24 @@
   gap: 1rem;
   justify-content: center;
   max-height: 872px;
+  z-index: 9;
   .previewSlides {
-    width: 20%;
+    width: 25%;
     display: flex;
     align-self: baseline;
     flex-direction: column;
     gap: 0.5rem;
 
-    // overflow-y: scroll;
     .prev {
       transition: 0.3s;
       outline: 2px solid transparent;
       display: flex;
-      background: black;
       &.active {
         opacity: 0.8;
       }
       img {
-        width: 100%;
-        height: auto;
+        width: fill;
+        height: fill;
         object-fit: cover;
       }
     }
@@ -30,17 +29,18 @@
   .activeSlide {
     width: 75%;
     img {
-      width: 100%;
-      max-height: 800px;
+      width: fill;
+      max-height: fill;
       object-fit: cover;
     }
   }
 
   .sizeBtn {
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-end;
     padding: 20px 20px;
+    position: absolute;
+    top: 5rem;
+    left: 45%;
 
     button {
       border: 1px solid #e4e4e4;
@@ -50,7 +50,6 @@
       width: 20px;
       height: 20px;
       text-align: center;
-      justify-self: center;
     }
 
     button:hover {
