--- a/components/Main/Collections/index.module.scss
+++ b/components/Main/Collections/index.module.scss
@@ -1,9 +1,10 @@
 .wrapper {
   display: grid;
-  grid-template-columns: repeat(4, 355px);
+  grid-template-columns: repeat(4, 28.6rem);
   gap: 0;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   background: var(--reup-green);
+  overflow: hidden;
 }
