--- a/components/Main/Collections/index.module.scss
+++ b/components/Main/Collections/index.module.scss
@@ -1,10 +1,10 @@
 .wrapper {
-  display: grid;
-  grid-template-columns: repeat(4, 28.6rem);
+  display: flex;
+  // grid-template-columns: repeat(4, 300px);
+  flex-direction: row;
   gap: 0;
-  align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   background: var(--reup-green);
-  overflow: hidden;
+  // overflow: hidden;
 }
