--- a/components/Ordering/DataOrder/PersonalData/index.module.scss
+++ b/components/Ordering/DataOrder/PersonalData/index.module.scss
@@ -53,14 +53,17 @@
         }
       }
     }
-
-    .btnClickSubmitForm {
+  }
+  .btnClickSubmitForm {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    .btnWrap {
       align-self: flex-end;
       width: 80%;
-
-      button {
-        width: 34rem;
-      }
+    }
+    button {
+      width: 34rem;
     }
   }
 }
