--- a/components/Ordering/DataOrder/PersonalData/PersonalDataPolicy/index.module.scss
+++ b/components/Ordering/DataOrder/PersonalData/PersonalDataPolicy/index.module.scss
@@ -6,4 +6,12 @@
   input {
     width: 34rem;
   }
+  label {
+    span {
+      border-bottom: 2px solid black;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
