--- a/components/SubHeaderLK/index.module.scss
+++ b/components/SubHeaderLK/index.module.scss
@@ -1,11 +1,30 @@
 .wrapper {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  display: flex;
+  flex-direction: column;
   box-sizing: border-box;
   border: 1px solid black;
   border-top: 0px solid black;
+  .oneBlock {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    > button {
+      border: none;
+      outline: 1px solid black;
+      box-sizing: content-box;
+      font-weight: 700;
+    }
+  }
+  .twoBlock {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    > button {
+      border: none;
+      outline: 1px solid black;
+      box-sizing: content-box;
+      font-weight: 700;
+    }
+  }
   > button {
     text-align: right;
     border: none;
