--- a/components/Main/Slider/Slide/index.module.scss
+++ b/components/Main/Slider/Slide/index.module.scss
@@ -3,6 +3,12 @@
   grid-template-columns: 33% auto;
   grid-template-rows: 1fr;
 
+  @media screen and (min-width: 390px) and (max-width: 586px) {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
   .rightSide {
     display: flex;
     flex-direction: column;
